--- a/index.html
+++ b/index.html
@@ -1,207 +1,233 @@
-<html>
-   <head>
-      <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour">
-      <meta name="description" content="This is the personal webside of Google Trusted Photographer January Smith">
-      <title>January Smith - Google Trusted Photographer</title>
-      <link rel="icon" href="images/home/favicon.ico">
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-      <script type="text/javascript" src="scripts/bootstrap.js"></script>
-      <link href="styles/bootstrap.css" rel="stylesheet" type="text/css">
-      <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-48280446-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
-   </head>
-   <body>
-      <div class="navbar navbar-default navbar-fixed-top">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#"><span>January Smith</span></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="active">
-                     <a href="#top">Home</a>
-                  </li>
-                  <li>
-                     <a href="#streetview">Google Street View</a>
-                  </li>
-                  <li class="dropdown">
-                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Gallery<span class="caret"></span></a>
-                     <ul class="dropdown-menu">
-                        <li>
-                           <a href="gallery/gallery.html">Google Street View Tours</a>
-                        </li>
-                        <li>
-                           <a href="courthouse/Texas-Courthouse-Tours.html">Texas County Courthouse Tours</a>
-                        </li>
-                     </ul>
-                  </li>
-                  <li>
-                     <a href="#about">About</a>
-                  </li>
-               </ul>
-            </div>
-         </div>
+<html><head>
+    <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour">
+    <meta name="description" content="This is the personal webside of Google Trusted Photographer January Smith">
+    <title>January Smith - Google Trusted Photographer</title>
+    <link rel="icon" href="images/home/favicon.ico">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap.js"></script>
+    <link href="styles/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                            	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                            	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                            	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                            
+                            	  ga('create', 'UA-48280446-1', 'auto');
+                            	  ga('send', 'pageview');
+    </script>
+  </head><body>
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><span>January Smith</span></a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active">
+              <a href="#top">Home</a>
+            </li>
+            <li>
+              <a href="#streetview">Google Street View</a>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Gallery<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="gallery/gallery.html">Google Street View Tours</a>
+                </li>
+                <li>
+                  <a href="courthouse/Texas-Courthouse-Tours.html">Texas County Courthouse Tours</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#about">About</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      
-      <div class="section">
-         <div class="container-fluid">
-            <div class="row text-center" id="top">
-               <div class="col-md-12">
-                  <br>
-                  <br>
-                  <h1 class="text-center">Google Virtual Tours</h1>
-                  <h3 class="text-center text-muted">Enhance the online presence of your business across Google+, Google Maps,
-                     and Google Search with a 360º virtual tour powered by Street View technology
-                     and designed by a Google Trusted Photographer.
-                  </h3>
-                  <div class="embed-responsive embed-responsive-16by9">
-                     <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/demo/index.html" allowfullscreen="" style="border:medium double"></iframe>
-                  </div>
-                  <br>
-                  <br>
-                  <a class="btn btn-lg btn-primary" href="#streetview">Find Out More </a>
-                  <br>
-                  <br>
-                  <br>
-               </div>
+    </div>
+    <div class="section">
+      <div class="container-fluid">
+        <div class="row text-center" id="top">
+          <div class="col-md-12">
+            <br>
+            <br>
+            <h1 class="text-center">Google Virtual Tours</h1>
+            <h3 class="text-center text-muted">Enhance the online presence of your business across Google+, Google Maps,
+              and Google Search with a 360º virtual tour powered by Street View technology
+              and designed by a Google Trusted Photographer.</h3>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/demo/index.html" allowfullscreen="" style="border:medium double"></iframe>
             </div>
-            <div class="row" style="background-color:black">
-               <br>
-               <br>
-               <br>
-               <br>
-               <br>
-               <br>
+            <br>
+            <br>
+            <a class="btn btn-lg btn-primary" href="#streetview">Find Out More </a>
+            <br>
+            <br>
+            <br>
+          </div>
+        </div>
+        <div class="row" style="background-color:black">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+        </div>
+        <div class="row" id="streetview">
+          <br>
+          <div class="jumbotron col-md-12">
+            <h2 class="text-center">What is a Google Street View Virtual Tour?</h2>
+            <br>
+            <div class="col-md-8">
+              <img src="images/home/SeeInside.png" class="img-responsive">
             </div>
-            <div class="row" id="streetview">
-               <br>
-               <div class="jumbotron col-md-12">
-                  <h2 class="text-center">What is a Google Street View Virtual Tour?</h2>
-                  <br>
-                  <div class="col-md-8">
-                     <img src="images/home/SeeInside.png" class="img-responsive">
-                  </div>
-                  <div class="col-md-4">
-                     <h3>See Inside</h3>
-                     <p>It is actually so much more than just a virtual tour...
-                        <br>
-                        <br>Your business benefits from an improved online presence across Google+,
-                        Google Maps, Google Search, and even your own website because when customers
-                        find you online they can click
-                        <b>See Inside&nbsp;</b>to walk through, explore, and take a closer look around
-                        your business from their desktop, laptop, tablet or mobile device.
-                        <br>
-                        <br>Photo packages start at around $150 for 3-4 panoramas and take about an
-                        hour to shoot.
-                     </p>
-                  </div>
-                  <div class="col-md-12 text-center">
-                     <h3 class="text-primary">Getting started is easy...</h3>
-                     <br>
-                     <div class="col-md-4 text-center">
-                        <i class="fa fa-3x fa-fw text-primary fa-calendar"></i>
-                        <br>
-                        <p class="lead text-primary">Schedule</p>
-                     </div>
-                     <div class="col-md-4 text-center">
-                        <i class="fa fa-3x fa-camera fa-fw text-primary"></i>
-                        <br>
-                        <p class="lead text-primary">Shoot</p>
-                     </div>
-                     <div class="col-md-4 text-center">
-                        <i class="fa fa-3x fa-cloud fa-fw text-primary"></i>
-                        <br>
-                        <p class="lead text-primary">Publish</p>
-                     </div>
-                     <br>
-                     <br>
-                     <a class="btn btn-large btn-lg btn-primary" href="#about">Get Started</a>
-                     <br>
-                     <br>
-                  </div>
-               </div>
+            <div class="col-md-4">
+              <h3>See Inside</h3>
+              <p>It is actually so much more than just a virtual tour...
+                <br>
+                <br>Your business benefits from an improved online presence across Google+,
+                Google Maps, Google Search, and even your own website because when customers
+                find you online they can click
+                <b>See Inside&nbsp;</b>to walk through, explore, and take a closer look around
+                your business from their desktop, laptop, tablet or mobile device.
+                <br>
+                <br>Photo packages start at around $150 for 3-4 panoramas and take about an
+                hour to shoot.</p>
             </div>
-            <div class="row" style="background-color:black">
-               <br>
-               <br>
-               <br>
-               <br>
-               <br>
-               <br>
+            <div class="col-md-12 text-center">
+              <h3 class="text-primary">Getting started is easy...</h3>
+              <br>
+              <div class="col-md-4 text-center">
+                <i class="fa fa-3x fa-fw text-primary fa-calendar"></i>
+                <br>
+                <p class="lead text-primary">Schedule</p>
+              </div>
+              <div class="col-md-4 text-center">
+                <i class="fa fa-3x fa-camera fa-fw text-primary"></i>
+                <br>
+                <p class="lead text-primary">Shoot</p>
+              </div>
+              <div class="col-md-4 text-center">
+                <i class="fa fa-3x fa-cloud fa-fw text-primary"></i>
+                <br>
+                <p class="lead text-primary">Publish</p>
+              </div>
+              <br>
+              <br>
+              <a class="btn btn-large btn-lg btn-primary" href="#about">Get Started</a>
+              <br>
+              <br>
             </div>
-            <div class="row" id="about">
-               <br>
-               <br>
-               <h1 class="text-center">About</h1>
-               <br>
-               <br>
-               <div class="col-md-6">
-                  <img src="images/home/me.jpg" class="center-block img-responsive img-thumbnail">
-                  <div class="row">
-                     <div class="col-md-9">
-                        <h3 class="text-center text-muted">January Smith</h3>
-                        <p class="text-center text-muted">Google Trusted Photographer</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-6">
-                  <p class="lead text-primary">Google Street View virtual tours is all I do...
-                     <br>
-                     <br>I have been a Google Trusted Photographer for over two years now shooting
-                     high quality panoramic photography across Texas and the Southwest. &nbsp;With
-                     numerous photo shoots under my belt and over 30 years experience in software
-                     and web development I am ready to put your business on the map.
-                  </p>
-                  <div>
-                     <br>
-                  </div>
-                  <div>
-                     <p class="lead text-primary">Give me a call or send me an email to schedule your photo shoot.</p>
-                  </div>
-               </div>
-               <div class="row">
+          </div>
+        </div>
+        <div class="row" style="background-color:black">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+        </div>
+        <div class="row" id="about">
+          <br>
+          <br>
+          <h1 class="text-center">About</h1>
+          <br>
+          <br>
+          <div class="col-md-4">
+            <img src="images/home/me.jpg" class="center-block img-responsive img-thumbnail">
+            <div class="row">
+              <div class="col-md-9">
+                <h2 class="text-center text-muted">January Smith</h2>
+                <p class="text-left text-muted">(210) 870-6991
                   <br>
-                  <br>
-                  <br>
-                  <h3 class="text-center text-primary">Get In Touch...</h3>
-                  <br>
-                  <div class="col-md-2 text-center">
-                     <i class="fa fa-3x fa-fw fa-phone text-primary"></i>
-                     <br>
-                     <p class="lead text-primary">(210) 870-6991</p>
-                  </div>
-                  <div class="col-md-2 text-center">
-                     <i class="fa fa-3x fa-fw fa-send-o text-primary"></i>
-                     <br>
-                     <a href="mailto:january@januarysmith.com">january@januarysmith.com</a>
-                  </div>
-                  <div class="col-md-2 text-center">
-                     <i class="fa fa-3x fa-envelope-o fa-fw text-primary"></i>
-                     <br>
-                     <p class="text-primary">11942 Mission Trace
-                        <br>San Antonio, TX 78230
-                     </p>
-                  </div>
-               </div>
+                  <a href="MAILTO:january@januarysmith.com">january@januarysmith.com</a>
+                  <br>11942 Mission Trace
+                  <br>San Antonio, TX 78230</p>
+              </div>
             </div>
-         </div>
+          </div>
+          <div class="col-md-8">
+            <p class="lead text-primary">Google Street View virtual tours is all I do...
+              <br>
+              <br>I have been a Google Trusted Photographer for over two years now shooting
+              high quality panoramic photography across Texas and the Southwest. &nbsp;With
+              numerous photo shoots under my belt and over 30 years experience in software
+              and web development I am ready to put your business on the map.</p>
+            <div>
+              <br>
+            </div>
+            <div>
+              <p class="lead text-primary">Give me a call or send me an email to schedule your photo shoot.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h2 class="text-center">Contact</h2>
+              </div>
+              <div class="panel-body">
+                <form class="form-horizontal" role="form" ction="//formspree.io/INFO@januarysmith.com" method="POST">
+                  <div class="form-group">
+                    <div class="col-sm-2">
+                      <label for="inputEmail3" class="control-label">Name</label>
+                    </div>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputEmail3" placeholder="Name" name="name">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-2">
+                      <label for="inputEmail3" class="control-label">Phone</label>
+                    </div>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputEmail3" placeholder="Phone">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-2">
+                      <label for="inputEmail3" class="control-label">Email</label>
+                    </div>
+                    <div class="col-sm-10">
+                      <input type="email" class="form-control" id="inputEmail3" placeholder="Email" name="_replyto">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-2">
+                      <label for="inputPassword3" class="control-label">Message</label>
+                    </div>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputPassword3" placeholder="Message">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <button type="submit" class="btn btn-primary">Send</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3"></div>
+        </div>
       </div>
-   </body>
-</html>
+    </div>
+  
+
+</body></html>
