--- a/stock/portfolio.html
+++ b/stock/portfolio.html
@@ -1,98 +1,101 @@
 <html><head>
-        <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour, Stock Photography">
-        <meta name="description" content="This is the persoanl website of Google Street View Trusted Photographer January Smith - this page displays a gallery of my Stock Photography.">
-        <title>January Smith - Google Street View Trusted Photographer</title>
-        <link rel="icon" href="images/home/favicon.ico">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script type="text/javascript" src="../scripts/bootstrap.js"></script>
-        <link href="../styles/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATcgRESAmvM2XMCMTwgotS0T5afRJuPUc"></script>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour, Stock Photography">
+    <meta name="description" content="This is the persoanl website of Google Street View Trusted Photographer January Smith - this page displays a gallery of my Stock Photography.">
+    <title>January Smith - Google Street View Trusted Photographer</title>
+    <link rel="icon" href="images/home/favicon.ico">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="../scripts/bootstrap.js"></script>
+    <link href="../styles/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATcgRESAmvM2XMCMTwgotS0T5afRJuPUc"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                                     	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                                     	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                                     	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
                                     
                                     	  ga('create', 'UA-48280446-1', 'auto');
                                     	  ga('send', 'pageview');
-        </script>
-    </head><body>
-        <div class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="../index.html"><span>January Smith</span></a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="../index.html">Home</a>
-                        </li>
-                        <li>
-                            <a href="../google/street-view.html">Google Street View</a>
-                        </li>
-                        <li class="active dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Gallery<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="../tours/tours.html">Google Street View Tours</a>
-                                </li>
-                                <li>
-                                    <a href="../courthouse/Texas-Courthouse-Tours.html">Texas County Courthouse Tours</a>
-                                </li>
-                                <li>
-                                    <a href="../stock/portfolio.html">Stock Photos</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="../about/about.html">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+    </script>
+  </head><body>
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="../index.html"><span>January Smith</span></a>
         </div>
-        <div id="fullcarousel" data-interval="5000" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="../images/stock/ENERO-20.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-35.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-47.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-48.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-55.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-82.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-145.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-146.jpg" class="center-block img-rounded">
-                </div>
-                <div class="item">
-                    <img src="../images/stock/ENERO-184.jpg" class="center-block img-rounded">
-                </div>
-            </div>
-            <a class="left carousel-control" href="#fullcarousel" data-slide="prev"><i class="icon-prev fa fa-angle-left"></i></a>
-            <a class="right carousel-control" href="#fullcarousel" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="../index.html">Home</a>
+            </li>
+            <li>
+              <a href="../google/street-view.html">Google Street View</a>
+            </li>
+            <li class="active dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Gallery<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="../tours/tours.html">Google Street View Tours</a>
+                </li>
+                <li>
+                  <a href="../courthouse/Texas-Courthouse-Tours.html">Texas County Courthouse Tours</a>
+                </li>
+                <li>
+                  <a href="../stock/portfolio.html">Stock Photos</a>
+                </li>
+                 <li>
+                  <a href="https://plus.google.com/+JanuarySmith/posts" target="_blank">Picture Of The Day</a>
+                </li>
+             </ul>
+            </li>
+            <li>
+              <a href="../about/about.html">About</a>
+            </li>
+          </ul>
         </div>
-    
+      </div>
+    </div>
+    <div id="fullcarousel" data-interval="5000" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../images/stock/ENERO-20.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-35.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-47.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-48.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-55.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-82.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-145.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-146.jpg" class="center-block img-rounded">
+        </div>
+        <div class="item">
+          <img src="../images/stock/ENERO-184.jpg" class="center-block img-rounded">
+        </div>
+      </div>
+      <a class="left carousel-control" href="#fullcarousel" data-slide="prev"><i class="icon-prev fa fa-angle-left"></i></a>
+      <a class="right carousel-control" href="#fullcarousel" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
+    </div>
+  
 
 </body></html>
