--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>January Smith - Google Street View Trusted Photographer</title>
     <link rel="icon" href="images/home/favicon.ico">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATcgRESAmvM2XMCMTwgotS0T5afRJuPUc"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -149,10 +148,5 @@
                                             google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head><body>
-
-<div style="width: 100%; height: 100%;float:left" id="panoDIV"></div>
-
-
-  
-
+<div style="width: 100%; height: 100%" id="panoDIV"></div>
 </body></html>
