--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="description" content="This is the personal website of Google Street View Trusted Photographer January Smith.">
     <title>January Smith - Google Street View Trusted Photographer</title>
     <link rel="icon" href="images/home/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <!-- Bootstrap -->
     <link href="styles/bootstrap.min.css" rel="stylesheet">
@@ -154,8 +155,47 @@
 </head>
 <body>
 
-<div class="container-fluid">
-<div  style="width: 100%; height: 100%" id="panoDIV"></div>
+<div class="container-fluid, hidden-xs">
+  <div style="width: 100%; height: 100%" id="panoDIV"></div>
+</div>
+
+<div class="container-fluid, visible-xs">
+  <!--This is a carousel displayed when viewed on a phone-->
+  <div id="panoCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#panoCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#panoCarousel" data-slide-to="1"></li>
+      <li data-target="#panoCarousel" data-slide-to="2"></li>
+      <li data-target="#panoCarousel" data-slide-to="3"></li>
+   </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="images/home/anytime.png" alt="..." style="width: 100%; height: 100%" >
+      </div>
+      <div class="item">
+        <img src="images/home/winters.png" alt="..." style="width: 100%; height: 100%" >
+      </div>
+      <div class="item">
+        <img src="images/home/xpression.png" alt="..." style="width: 100%; height: 100%" >
+      </div>
+      <div class="item">
+        <img src="images/home/advanced.png" alt="..." style="width: 100%; height: 100%" >
+      </div>
+   </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
