--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@
 </head>
 <body>
 
+<!--This is the pano viewer displayed when viewed on a tablet, notebook, or desktop-->
 <div class="container-fluid, hidden-xs">
   <div style="width: 100%; height: 100%" id="panoDIV"></div>
 </div>
 
+<!--This is a carousel displayed when viewed on a phone-->
 <div class="container-fluid, visible-xs">
-  <!--This is a carousel displayed when viewed on a phone-->
-  <div id="panoCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+  <div id="panoCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="6000">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#panoCarousel" data-slide-to="0" class="active"></li>
@@ -173,18 +174,24 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="images/home/anytime.png" alt="..." style="width: 100%; height: 100%" >
+        <img src="images/home/winters1.png" alt="..." style="width: 100%; height: 100%" >
       </div>
       <div class="item">
-        <img src="images/home/winters.png" alt="..." style="width: 100%; height: 100%" >
+        <img src="images/home/winters2.png" alt="..." style="width: 100%; height: 100%" >
       </div>
       <div class="item">
-        <img src="images/home/xpression.png" alt="..." style="width: 100%; height: 100%" >
+        <img src="images/home/winters3.png" alt="..." style="width: 100%; height: 100%" >
       </div>
       <div class="item">
-        <img src="images/home/advanced.png" alt="..." style="width: 100%; height: 100%" >
+        <img src="images/home/winters4.png" alt="..." style="width: 100%; height: 100%" >
       </div>
-   </div>
+         <div class="item">
+        <img src="images/home/winters5.png" alt="..." style="width: 100%; height: 100%" >
+      </div>
+            <div class="item">
+        <img src="images/home/winters6.png" alt="..." style="width: 100%; height: 100%" >
+      </div>
+    </div>
 
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
