--- a/index.html
+++ b/index.html
@@ -155,54 +155,37 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#jhsNavbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">January Smith</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="jhsNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="about\about.html">About</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
 <!--This is the pano viewer displayed when viewed on a tablet, notebook, or desktop-->
 <div class="container-fluid, hidden-xs">
   <div style="width: 100%; height: 100%" id="panoDIV"></div>
 </div>
 
-<!--This is a carousel displayed when viewed on a phone-->
+<!--This is an image displayed when viewed on a phone-->
 <div class="container-fluid, visible-xs">
-  <div id="panoCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="6000">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#panoCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#panoCarousel" data-slide-to="1"></li>
-      <li data-target="#panoCarousel" data-slide-to="2"></li>
-      <li data-target="#panoCarousel" data-slide-to="3"></li>
-   </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="images/home/winters1.png" alt="..." style="width: 100%; height: 100%" >
-      </div>
-      <div class="item">
-        <img src="images/home/winters2.png" alt="..." style="width: 100%; height: 100%" >
-      </div>
-      <div class="item">
-        <img src="images/home/winters3.png" alt="..." style="width: 100%; height: 100%" >
-      </div>
-      <div class="item">
-        <img src="images/home/winters4.png" alt="..." style="width: 100%; height: 100%" >
-      </div>
-         <div class="item">
-        <img src="images/home/winters5.png" alt="..." style="width: 100%; height: 100%" >
-      </div>
-            <div class="item">
-        <img src="images/home/winters6.png" alt="..." style="width: 100%; height: 100%" >
-      </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+  <img src="images/home/riverwalk.png" alt="..." style="width: 100%; height: 100%" >
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
