--- a/about/about.html
+++ b/about/about.html
@@ -35,7 +35,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="jhsNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://plus.google.com/+januarysmith" target="_blank">Picture of Day</a></li>
+        <li><a href="https://plus.google.com/+januarysmith" target="_blank">Picture of the Day</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
